add ci, webpack production

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
 #basic
-PORT=8000
+PORT=8888
 
 #session
 SESSION_SECRET=secret
 REDIS_PORT=6379
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 
 #database
 TYPEORM_CONNECTION=mysql
-TYPEORM_HOST=localhost
-TYPEORM_USERNAME=root
+TYPEORM_HOST=db
+TYPEORM_USERNAME=ryan
 TYPEORM_PASSWORD=ryanryan
 TYPEORM_DATABASE=cuisine
 TYPEORM_PORT=3306
