--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "esModuleInterop": true,
     "target": "es5",
     "jsx": "react",
-    "noImplicitAny": true,
+    "noUnusedLocals": true,
+    "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
     "sourceMap": true,
     "lib": ["es6", "dom"],
