--- a/.docker.env
+++ b/.docker.env
@@ -10,9 +10,8 @@ REDIS_HOST=redis
 TYPEORM_CONNECTION=mysql
 TYPEORM_HOST=db
 TYPEORM_USERNAME=ryan
-TYPEORM_PASSWORD=ryanryan
-TYPEORM_DATABASE=cuisine
+# TYPEORM_PASSWORD=ryanryan
+# TYPEORM_DATABASE=cuisine
 TYPEORM_PORT=3306
 TYPEORM_SYNCHRONIZE=true
 TYPEORM_LOGGING=false
-TYPEORM_ENTITIES=dist/models/*.js
