--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "start": "npm run prod",
     "prod": "npm run client-prod && npm run server-build && npm run server-prod",
     "build": "npm run client-build && npm run server-build",
-    "debug": "npm run client-build && npm run server-build && npm run server-debug",
+    "dev": "npm run client-build && npm run server-dev",
+    "docker": "npm run client-build && npm run server-build && npm run server-docker",
     "client-build": "webpack --config webpack.dev.js",
     "client-prod": "webpack --config webpack.prod.js",
     "client-watch": "webpack -w --config webpack.dev.js",
-    "server-prod": "cross-env NODE_ENV=production node dist/server.js | node_modules/.bin/bunyan",
-    "server-build": "tsc && npm run tslint",
-    "server-debug": "node --inspect dist/server.js | node_modules/.bin/bunyan",
-    "server-watch": "nodemon --inspect dist/server.js | node_modules/.bin/bunyan",
+    "server-prod": "cross-env NODE_ENV=production node build/server.js | node_modules/.bin/bunyan",
+    "server-serve": "node build/server.js | node_modules/.bin/bunyan",
+    "server-build": "npm run setting-build && tsc && npm run tslint",
+    "server-dev": "ts-node src/server.ts | node_modules/.bin/bunyan",
+    "server-docker": "cross-env NODE_ENV=docker node dist/server.js | node_modules/.bin/bunyan",
+    "setting-build": "cd setting && tsc && cd .. && npm install file:./setting",
     "tslint": "tslint -c tslint.json -p tsconfig.json",
     "test": "echo \"test passed\" && exit 0"
   },
@@ -45,6 +48,7 @@
     "react-router-dom": "^4.3.1",
     "redis": "^2.8.0",
     "reflect-metadata": "^0.1.12",
+    "setting": "file:setting",
     "typeorm": "^0.2.9"
   },
   "devDependencies": {
@@ -66,22 +70,28 @@
     "@types/react-dom": "^16.0.11",
     "@types/redis": "^2.8.8",
     "@types/shelljs": "^0.8.0",
-    "awesome-typescript-loader": "^5.2.1",
     "clean-webpack-plugin": "^1.0.0",
     "concurrently": "^4.1.0",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.1",
     "debug": "^4.1.0",
     "file-loader": "^2.0.0",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
     "morgan": "^1.9.1",
-    "node-sass": "^4.10.0",
     "nodemon": "^1.18.6",
+    "prettier": "^1.18.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "sass-loader": "^7.1.0",
     "shelljs": "^0.8.3",
     "style-loader": "^0.23.1",
+    "stylelint": "^10.1.0",
+    "stylelint-config-prettier": "^5.2.0",
+    "stylelint-config-recommended": "^2.2.0",
+    "stylelint-prettier": "^1.1.1",
     "supports-color": "^5.5.0",
+    "ts-loader": "^6.0.4",
     "ts-node": "^7.0.1",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "tslint": "^5.11.0",
