--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,16 +15,16 @@ services:
     networks:
       - online
   db:
-    image: mysql:5.6.42
+    image: mysql:5.7
     volumes:
       - db-data:/var/lib/mysql
     ports:
       - "3306:3306"
     environment:
-      - MYSQL_ROOT_PASSWORD=rootroot
-      - MYSQL_USER=ryan
-      - MYSQL_PASSWORD=ryanryan
-      - MYSQL_DATABASE=cuisine
+      # - MYSQL_ROOT_PASSWORD=rootroot
+      - MYSQL_USER=root
+      # - MYSQL_PASSWORD=ryanryan
+      # - MYSQL_DATABASE=cuisine
     networks:
       - online
   redis:
