--- a/.docker.env
+++ b/.docker.env
@@ -9,8 +9,8 @@ REDIS_HOST=redis
 #database
 TYPEORM_CONNECTION=mysql
 TYPEORM_HOST=db
-TYPEORM_USERNAME=ryan
-# TYPEORM_PASSWORD=ryanryan
+TYPEORM_USERNAME=root
+TYPEORM_PASSWORD=ryanryan
 # TYPEORM_DATABASE=cuisine
 TYPEORM_PORT=3306
 TYPEORM_SYNCHRONIZE=true
