--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "description": "",
   "scripts": {
     "start": "npm run prod",
-    "prod": "npm run client-prod && npm run server-build && npm run server-prod",
-    "build": "npm run client-build && npm run server-build",
-    "dev": "npm run client-build && npm run server-dev",
-    "docker": "npm run client-build && npm run server-build && npm run server-docker",
+    "prod": "npm run client-prod && npm run server-build && npm run setting-build && npm run server-prod",
+    "build": "npm run client-build && npm run server-build && npm run setting-build",
+    "dev": "npm run client-build && npm run setting-build && npm run server-dev",
+    "docker": "npm run client-build && npm run setting-build && npm run server-docker",
     "client-build": "webpack --config webpack.dev.js",
     "client-prod": "webpack --config webpack.prod.js",
     "client-watch": "webpack -w --config webpack.dev.js",
     "server-prod": "cross-env NODE_ENV=production node build/server.js | node_modules/.bin/bunyan",
     "server-serve": "node build/server.js | node_modules/.bin/bunyan",
-    "server-build": "npm run setting-build && tsc && npm run tslint",
+    "server-build": "tsc && npm run tslint",
     "server-dev": "ts-node src/server.ts | node_modules/.bin/bunyan",
-    "server-docker": "cross-env NODE_ENV=docker node dist/server.js | node_modules/.bin/bunyan",
+    "server-docker": "cross-env NODE_ENV=docker ts-node src/server.ts | node_modules/.bin/bunyan",
     "setting-build": "cd setting && tsc && cd .. && npm install file:./setting",
     "tslint": "tslint -c tslint.json -p tsconfig.json",
     "test": "echo \"test passed\" && exit 0"
