--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-router-dom": "^4.3.1",
     "redis": "^2.8.0",
     "reflect-metadata": "^0.1.12",
+    "serve-favicon": "^2.5.0",
     "setting": "file:setting",
     "typeorm": "^0.2.9"
   },
@@ -69,6 +70,7 @@
     "@types/react": "^16.7.11",
     "@types/react-dom": "^16.0.11",
     "@types/redis": "^2.8.8",
+    "@types/serve-favicon": "^2.2.30",
     "@types/shelljs": "^0.8.0",
     "clean-webpack-plugin": "^1.0.0",
     "concurrently": "^4.1.0",
@@ -76,6 +78,7 @@
     "css-loader": "^1.0.1",
     "debug": "^4.1.0",
     "file-loader": "^2.0.0",
+    "html-webpack-plugin": "^3.2.0",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "morgan": "^1.9.1",
